     during very long time. (Alexander Belchenko)

   * The return value of
     ``VersionedFile.iter_lines_added_or_present_in_versions`` has been
     changed. Previously it was an iterator of lines, now it is an iterator of
     (line, version_id) tuples. This change has been made to aid reconcile and
     fetch operations. (Robert Collins)

  INTERNALS:

   * Added ``ContainerSerialiser`` and ``ContainerPushParser`` to
     ``bzrlib.pack``.  These classes provide more convenient APIs for generating
     and parsing containers from streams rather than from files.  (Andrew
     Bennetts)

   * New module ``lru_cache`` providing a cache for use by tasks that need
     semi-random access to large amounts of data. (John A Meinel)

  TESTING:


bzr 0.92rc1 2007-10-29
======================

  NOTES WHEN UPGRADING:

  CHANGES:
  
   * ``bzr`` now returns exit code 4 if an internal error occurred, and 
     3 if a normal error occurred.  (Martin Pool)

   * ``pull``, ``merge`` and ``push`` will no longer silently correct some
     repository index errors that occured as a result of the Weave disk format.
     Instead the ``reconcile`` command needs to be run to correct those
     problems if they exist (and it has been able to fix most such problems
     since bzr 0.8). Some new problems have been identified during this release
     and you should run ``bzr check`` once on every repository to see if you
     need to reconcile. If you cannot ``pull`` or ``merge`` from a remote
     repository due to mismatched parent errors - a symptom of index errors -
     you should simply take a full copy of that remote repository to a clean
     directory outside any local repositories, then run reconcile on it, and
     finally pull from it locally. (And naturally email the repositories owner
     to ask them to upgrade and run reconcile).
     (Robert Collins)

  FEATURES:

   * New ``knitpack-experimental`` repository format. This is interoperable with